test/libhyperion/syntaxTests/conversion/function_type_pure_view.hyp
contract C {
    function h() pure external {
    }
    function f() view external returns (bytes4) {
        function () view external g = this.h;
        return g.selector;
    }
}
// ----
// TypeError 4888: (110-137): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
